test/Fail/Prop-NoImpredicativity.err
Prop-NoImpredicativity.agda:4.8-26: error: [UnequalTypes]
The types
  Prop₁
and
  Prop
are not equal
when checking that the expression {P : Prop} → P → P has type Prop
